refactor: 파이프라인 직접 호출 구조로 변경 및 Ingest API 응답 스펙 개선